# dailies

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_or_feature.yml
.github/workflows/: deploy.yml  mkdocs.yml  pr_linting.yml
dailies/: api.py  daily.py  environment.py  factory.py  preset.py
dailies/constant/: engine.py  main.py  tracking.py  util.py
dailies/engine/: ffmpeg_engine.py  nuke_engine.py  nuke_template_engine.py  video_engine.py
dailies/tracking/: __init__.py  flow_tracking.py  ftrack_tracking.py  kitsu_tracking.py  shotgun_tracking.py  tracking.py
dailies/ui/: dcc.py  ui.py
doc/: troubleshooting.md  user_guide.md
docs/: index.md  setup_instructions.md
preset/: edit_ffmpeg.json  edit_nuke-template.json  edit_nuke.json  edit_nuke_dnxhd.json  edit_nuke_prores.json
search/: search_index.json
setup_instructions/: index.html
template/: foobar.nk
test/: test_engines.py  test_factories.py  test_flow.py  test_ftrack.py  test_kitsu.py  test_shotgun.py  test_tracking.py
troubleshooting/: index.html
user_guide/: index.html
vfxdailies/: factory.py  nuke_write_config.py
vfxdailies/constant/: engine.py  tracking.py
vfxdailies/engine/: __init__.py  ffmpeg_engine.py  nuke_engine.py  rvio_engine.py
vfxdailies/tracking/: __init__.py
vfxdailies/ui/: standalone.py
