[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vfxdailies"
description = "Tool for vfx/animation/film dailies production."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
  "PySide6==6.5.0",   # GUI Framework
  "shotgun_api3==3.5.1",  # Shotgun API

  # Note: FFmpeg, Nuke, and RV are external software, and must be installed separately.
  # Please refer to setup_instructions.md
]

[project.urls]
Homepage = "https://github.com/vfxpaco85/vfxdailies"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "mock"]
lint = ["ruff"]

[tool.setuptools]
packages = ["vfxdailies"]
include-package-data = true


[tool.setuptools.exclude-package-data]
"*" = [
  "*.pyc",
  "*.pyo",
  "*.pyd",
  "__pycache__",
  "*.DS_Store",
  "tests/*",
  "tests_embedded/*",
  "docs/*",
  "examples/*",
  ".*",
  "*.md"
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
